Separacion de Suceciones

--- a/Sucesiones/proyecto_sucesiones.tex
+++ b/Sucesiones/proyecto_sucesiones.tex
@@ -69,162 +69,12 @@
 \tableofcontents
 \clearpage
 
-\sect{Introducción}
+\input{Intro.tex}
 
-El siguiente trabajo trata el tema de sucesiones, específicamente un algoritmo para representarlas con una expresión general.
+\include{obt_algoritmo.tex}
 
-Se piensa estudiar el comportamiento del algoritmo, con el fin de simplificar su uso y, a su vez, dar avances sobre el alcance que tiene.
+\input{ejemplo_introd.tex}
 
-\sect{Obtención del algoritmo}
-\subsect{Ejemplo introductorio}
-Suponga que tiene los siguientes números: $36, 28, 15$
-
-Suponga que se les asignan respectivamente los siguientes índices: $0, 1, 2$
-
-¿Cómo se relacionan estos índices con los números dados?
-¿Existe una expresión que represente esta relación?
-
-Para esto, hacemos iteraciones sobre cómo debería ser el término general hasta un índice específico, de la siguiente manera:
-
-Llamemos $a_0(n)$ el término general que relaciona los índices hasta el $0$ con los números dados.
-
-Lo más sencillo es hacer
-\[a_0(n) = 36\]
-Ahora veamos cómo podríamos obtener $a_1(n)$
-
-Tenemos información de que $a_0(n)$ funciona para $n = 0$, entonces forzamos un término nuevo junto a este, que no altere a $a_0$ cuando $n=0$ pero que en $n=1$ nos dé el resultado deseado.
-Suponemos un $y$ tal que se cumpla el siguiente sistema:
-\begin{equation*}
-    \left\{
-        \begin{aligned}
-            a_1(n) &= y\cdot n + 36\\
-            28 &= y(1) + 36
-        \end{aligned}
-    \right\}
-\end{equation*}
-Nuevamente, ¿Por qué?, $a_1$ se define de esta manera debido a que en $n=0$ el término añadido es nulo, y queda únicamente lo que ya servía ($a_0$) y en $n=1$ queremos que $y$ sea tal que se fuerce el valor de $28$
-Resolviendo, se obtiene que $y = -8$ y
-\[a_1(n) = -8n + 36\]
-
-De igual forma, para el siguiente valor, tenemos información de que en $n=0$ y en $n=1$ , $a_1$ puede relacionar los índices con los valores dados. Entonces forzamos un tercer término para poder relacionar el siguiente valor ($15$) sin alterar lo que ya encontramos. De igual forma suponemos un $y$ tal que:
-\begin{equation*}
-    \left\{
-        \begin{aligned}
-            a_2(n) &= y\cdot n(n-1) -8n + 36\\
-            15 &= y (2)(2-1) - 8(2) + 36
-        \end{aligned}
-    \right\}
-\end{equation*}
-
-Resolviendo, se obtiene que $y = -2.5$ y
-\[a_2(n) = -2.5n(n-1) - 8n + 36\]
-
-\subsect{Obtención general}
-
-Suponga ahora la siguiente sucesión $S$ y sus índices $I$:
-\begin{align*}
-    S &= \langle x_0, x_1, x_2, \dots x_n\rangle\\
-    I &= \langle 0, 1, 2, \dots n \rangle
-\end{align*}
-
-El objetivo es obtener el término general de $S$ con índices $I$ .
-
-Procedemos de igual forma que en el ejemplo:
-
-\[a_0(n) = x_0\]
-
-Se tomará la Notación $y_k$ para representar el coeficiente de la iteración $k$ al resolver la ecuación que se mostró en el ejemplo, evitando hacer mención de la suposición de dicho $y$ en cada procedimiento.
-
-\begin{equation*}
-    \left\{
-        \begin{aligned}
-            a_1(n) &= y_1 \cdot n + x_0\\
-            x_1 &= y_1(1) + x_0
-        \end{aligned}
-    \right\}
-\end{equation*}
-
-Nuevamente, para $a_2(n)$
-\begin{equation*}
-    \left\{
-        \begin{aligned}
-            a_2(n) &= y_2 \cdot n(n-1) + (x_1 - x_0)n + x_0\\
-            x_2 &= y_2(2)(1) + (x_1 - x_0)(2) + x_0
-        \end{aligned}  
-    \right\}
-\end{equation*}
-
-Para $a_3(n)$
-
-\begin{equation*}
-    \left\{
-        \begin{aligned}
-            a_3(n) &= y_3 \cdot n(n-1)(n-2) + \dfrac{1}{2}[x_2 - ((x_1  - x_0)(2) + x_0)]n(n-1) + (x_1 - x_0)n + x_0\\
-            x_3 &= y_3 (3)(2)(1) + \dfrac{1}{2}[x_2 - ((x_1  - x_0)(2) + x_0)](3)(2) + (x_1 - x_0)(3) + x_0
-        \end{aligned}
-    \right\}
-\end{equation*}
-
-A partir de esta información, se conjetura lo siguiente:
-
-\begin{proofbox}[10]{Algorítmo}
-    El término general de una sucesión de $k$ términos, está dada por
-    \begin{center}
-        \begin{derivation}<1.5>
-                \res{ \left\{
-                    \begin{aligned}
-                        a_k(n) &= \dfrac{1}{k!}[x_k - a_{k-1}(k)]n(n-1)(n-2)\dots(n-(k-1)) + a_{k-1}(n)\\
-                        a_0 &= x_0
-                    \end{aligned}
-                \right\} }\\
-            \why{Notación}\\
-                \res{ \left\{
-                    \begin{aligned}
-                        a_k(n) &= \dfrac{1}{k!}[x_k - a_{k-1}(k)]\displaystyle\prod_{c=0}^{k-1}(n-c) + a_{k-1}(n)\\
-                        a_0 &= x_0
-                    \end{aligned}
-                \right\} }
-        \end{derivation}
-    \end{center}
-    Por su puesto, hace falta demostrarlo:
-\end{proofbox}
-\clearpage
-\begin{subproofbox}{demostración}
-    Por medio de la inducción, se toma un caso base, el cual será $k=0$. Esto significa que la expresión obtenida funciona para la sucesión $S = \langle x_0\rangle$
-    y usando la fórmula conjeturada, se obtiene que
-    \[a_0(n) = x_0 \]
-    Que efectivamente, cumple.
-    Ahora se supone que existe un $b$ tal que la fórmula se cumple para todo número natural menor que o igual a $b$. Queremos ver qué sucede si queremos hallar una sucesión que también pueda seguir el valor de $x_{b+1}$
-
-    Tenemos $S = \langle x_0, x_1, \dots x_b, x_{b+1}\rangle$
-    y que $a_b(n)$ relaciona a los naturales con los $x_i$ de $S$ hasta $x_b$
-
-    Queremos hallar una sucesión que pueda relacionar desde $x_0$ hasta $x_{b+1}$, a los naturales. Tomando la información anterior, suponemos que hay un $y_{b+1}$ tal que:
-
-    \begin{equation*}
-        \left\{
-            \begin{aligned}
-                a_{b+1}(n) &= y_{b+1} \displaystyle\prod_{c=0}^{b}(n-c) + a_b(n)\\
-                x_{b+1} &= y_{b+1} \displaystyle\prod_{c=0}^{b}(b+1 - c) + a_b(b + 1)                
-            \end{aligned}
-        \right\}
-    \end{equation*}
-    Se define de esta manera por la misma razón que se mencionó al principio. Sabemos que $a_b(n)$ sirve para todos los naturales antes que $b+1$ y relaciona cada uno respectivamente con un elemento de $S$. Entonces añadimos un nuevo término el cual se anule en todos los valores de $n$ hasta $b$ de forma que podamos seguir usando $a_b$ y forzando a que en $n=b+1$ el valor obtenido sea $x_{b+1}$ usando $y_{b+1}$ .
-
-    Desarrollando la segunda igualdad.
-
-    \begin{align*}
-        y_{b+1} \displaystyle\prod_{c=0}^{b}(b+1 - c) &= x_{b+1} - a_b(b+1)\\
-        y_{b+1} (b+1)(b)(b-1)\cdots 1 &= x_{b+1} - a_b(b+1)\\
-        y_{b+1} (b+1)! &= x_{b+1} - a_b(b+1)\\
-        y_{b+1} &= \dfrac{1}{(b+1)!}[x_{b+1} - a_b(b+1)]
-    \end{align*}
-
-    Reemplazando en la primera igualdad, se obtiene lo siguiente:
-
-    \[a_{b+1}(n) = \dfrac{1}{(b+1)!}[x_{b+1} - a_b(b+1)]\displaystyle\prod_{c=0}^{b}(n-c) + a_b(n)\]
-
-    Con este resultado se demuestra la validez de la fórmula.
-\end{subproofbox}
+\include{formula_algor.tex}
 
 \end{document}
