--- a/Logica/func_bool.tex
+++ b/Logica/func_bool.tex
@@ -1,4 +1,4 @@
-\sect{Funciones booleanas}
+\sect{Funciones booleanas} \label{func_bool}
 
 Las funciones booleanas son una forma de entender los conectores lógicos, y los valores que toman. La idea en este documento es poder salir del lenguaje de la lógica, y poder manejar dichas funciones como si se tratara de números, de forma que llegar a un resultado sea muy lineal.
 
