--- a/Sucesiones/proyecto_sucesiones.tex
+++ b/Sucesiones/proyecto_sucesiones.tex
@@ -31,7 +31,7 @@
 
 \hyphenpenalty=10000
 
-\newcommand{\logo}{"C:/Users/usuario/OneDrive/Documentos/U/logo-eci.jpg"}
+\newcommand{\logo}{"C:/Users/usuario/OneDrive/Documentos/U/logo-eci.png"}
 \setlength{\parindent}{0pt}
 
 \newcommand{\titlename}{Sucesiones}%
