--- a/Sumatorio/proyecto_sumas.tex
+++ b/Sumatorio/proyecto_sumas.tex
@@ -25,7 +25,7 @@
     bottom = 2.5cm,
     headheight = 72pt
 }
-\newcommand{\logo}{"C:/Users/usuario/OneDrive/Documentos/U/logo-eci.jpg"}
+\newcommand{\logo}{"C:/Users/usuario/OneDrive/Documentos/U/logo-eci.png"}
 \renewcommand{\author}{David Gómez, Laura Rincón}
 \renewcommand{\title}{Sumatorios}
 
