arreglo en ejemplo -> func_log

--- a/Logica/func_log.tex
+++ b/Logica/func_log.tex
@@ -163,7 +163,7 @@ Un ejemplo del uso de estas funciones sería evaluar la siguiente proposición:
 
 \begin{proofbox}{Ejemplo}
     \begin{center}
-        \begin{derivation}
+        \begin{derivation}[5pt]
                 \res{ \neg (p \land q) \equiv \neg p \lor \neg q }\\
             \why[\vdflechita]{definición de funciones}\\
                 \res{ E(N(\&(p, q)), O(N(p), N(q))) }\\
