faltaba un salto de linea

--- a/Logica/func_log.tex
+++ b/Logica/func_log.tex
@@ -175,7 +175,7 @@ Un ejemplo del uso de estas funciones sería evaluar la siguiente proposición:
                 \res{ E(1 - pq, 1 - pq) }\\
             \why*[=]{}\\
                 \res{ (2(1 - pq) + 1)(1 - pq)  + 1 - (1 - pq) }\\
-            \why*[=]{}
+            \why*[=]{}\\
                 \res{ 1 - pq - 2pq + 2(pq)^2 + pq }\\
             \why[=]{ Propiedad fundamental }\\
                 \res{ 1 - pq - 2pq + 2pq + pq }\\
