--- a/Logica/func_log.tex
+++ b/Logica/func_log.tex
@@ -1,5 +1,4 @@
 \sect{Nuestras funciones}
-
 Como se mencionó, se quiere dar una extensión de la lógica que permita el uso de operaciones aritméticas en la misma.
 
 De forma análoga a las  \hyperref[func_bool]{funciones booleanas}, se toma un conjunto sobre el que se emplean estas funciones: $\mathbb{V} = \{0, 1\}$ , en donde $0$ corresponde al valor \emph{falso} y $1$ al de \emph{verdadero}
@@ -132,7 +131,9 @@ Cabe aclarar, que el resultado previo a obtener la descripción aritmética de c
                         \end{matrix}
                     \right\}\\
                 \why*{}\\
-                    & E(p, q) = (2q + 1)p + 1 - q
+                    & E(p, q) = (2q - 1)p + 1 - q\\
+                \why*{}\\
+                    & E(p, q) = pq + (1-p)(1-q)
             \end{derivation}
         \end{center}
 
@@ -146,9 +147,23 @@ Cabe aclarar, que el resultado previo a obtener la descripción aritmética de c
                         \end{matrix}
                     \right\}\\
                 \why*{}\\
-                    & D(p, q) = (1 - 2q)p + q
+                    & D(p, q) = (1 - 2q)p + q\\
+                \why*{}\\
+                    & D(p, q) = p(1 - q) + q(1 - p)
             \end{derivation}
         \end{center}
+
+        Por otra parte, están los cuantificadores, que se pueden expresar en términos de dos conectores: el cuantificador universal, es una forma de expresar una conjunción de varios términos; y el cuantificador existencial, es una forma de expresar una disyunción de varios términos.
+
+        \item[(viii)] $(\forall x \sthat r(x) : p(x))$
+        Al ser una conjunción de muchos términos, usando la función para la conjunción, se puede ver que se puede expresar como un productorio. Adoptaremos la siguiente notación:
+        
+        \[(\forall x \sthat r(x) : p(x)) \ \flechita\  \prod_{x\sthat r(x)} p(x)\]
+
+        \item[(iv)] $(\exists x \sthat r(x) : p(x))$
+        Debido a la definición de la conjunción como función, tomamos la siguiente equivalencia, y se define el cuantificador existencial como el universal.
+
+        \[(\exists x \sthat r(x) : p(x)) \equiv \neg (\forall x \sthat r(x) : \neg p(x))\ \flechita \ 1 - \prod_{x\sthat r(x)} (1 - p(x))\]
     \end{itemize}
 
     La propiedad, la cual llamaremos ``Propiedad fundamental'', más importante a tener en cuenta es la siguiente:
@@ -174,13 +189,11 @@ Un ejemplo del uso de estas funciones sería evaluar la siguiente proposición:
             \why*[=]{}\\
                 \res{ E(1 - pq, 1 - pq) }\\
             \why*[=]{}\\
-                \res{ (2(1 - pq) + 1)(1 - pq)  + 1 - (1 - pq) }\\
+                \res{ (1 - pq)(1 - pq) + (pq)(pq) }\\
+            \why[=]{ propiedad fundamental }\\
+                \res{ 1 - pq - pq + pq + pq }\\
             \why*[=]{}\\
-                \res{ 1 - pq - 2pq + 2(pq)^2 + pq }\\
-            \why[=]{ Propiedad fundamental }\\
-                \res{ 1 - pq - 2pq + 2pq + pq }\\
-            \why*[=]{}\\
-                \res{1}
+                \res{ 1 }
         \end{derivation}
     \end{center}
 \end{proofbox}
