--- a/Logica/func_log.tex
+++ b/Logica/func_log.tex
@@ -108,6 +108,8 @@ Cabe aclarar, que el resultado previo a obtener la descripción aritmética de c
             \end{derivation}
         \end{center}
 
+        \tcbbreak
+
         \item[(v)] $O(p, q)$
         \begin{center}
             \begin{derivation}<1>
@@ -171,10 +173,8 @@ Cabe aclarar, que el resultado previo a obtener la descripción aritmética de c
     \[p\in \mathbb{V} \To p^n = p\]
 
     Esto debido a que los valores de dicho conjunto, al elevarse a cualquier potencia no cambian su resultado. Y por otro lado, este resultado se obtiene de la propiedad del conector $\land$: idempotencia.
-
 \end{proofbox}
-
-
+\vspace*{-.1cm}
 Un ejemplo del uso de estas funciones sería evaluar la siguiente proposición:
 
 \begin{proofbox}{Ejemplo}
