seccion: eliminar recursion - Sucesiones

--- a/Sucesiones/formula_algor.tex
+++ b/Sucesiones/formula_algor.tex
@@ -68,7 +68,7 @@ A partir de esta información, se conjetura lo siguiente:
     Por su puesto, hace falta demostrarlo:
 \end{proofbox}
 \clearpage
-\begin{subproofbox}{demostración}
+\begin{proofbox}*{demostración}
     Por medio de la inducción, se toma un caso base, el cual será $k=0$. Esto significa que la expresión obtenida funciona para la sucesión $S = \langle x_0\rangle$
     y usando la fórmula conjeturada, se obtiene que
     \[a_0(n) = x_0 \]
@@ -104,4 +104,4 @@ A partir de esta información, se conjetura lo siguiente:
     \[a_{b+1}(n) = \dfrac{1}{(b+1)!}[x_{b+1} - a_b(b+1)]\displaystyle\prod_{c=0}^{b}(n-c) + a_b(n)\]
 
     Con este resultado se demuestra la validez de la fórmula.
-\end{subproofbox}
+\end{proofbox}
