--- a/Sucesiones/elim_rec.tex
+++ b/Sucesiones/elim_rec.tex
@@ -29,7 +29,7 @@ Sabemos desde antes que
 De esto, el valor que se debe generalizar, es lo que se encuentra entre corchetes. Para visualizar
 mejor el resultado de esto, se omitirá la fracción con el factorial.
 
-\begin{proofbox}{Valores desde $k=0$ hasta $k=5$}
+\begin{proofbox}{Valores desde $k=0$ hasta $k=6$}
     $
     \begin{matrix*}[l]
         k = 0 & \flechita& x_0\\
@@ -58,7 +58,7 @@ podremos ver los coeficientes de los valores deseados en cada $y_k$
     3   &   -1    & 3     & -3    & 1     & 0     & 0     & 0\\
     4   &   1     & -4    & 6     & -4    & 1     & 0     & 0\\
     5   &   -1    & 5     & -10   & 10    & -5    & 1     & 0\\
-    6   &   1     & -6    & 15    & -15   & 15    & -6    & 1\\
+    6   &   1     & -6    & 15    & -20   & 15    & -6    & 1\\
     \end{block}
 \end{blockarray}
 \]
@@ -73,3 +73,37 @@ Tras llegar a un punto en el que las siguientes iteraciones resultan iguales a u
 anterior, se halló entonces que:
 
 \[\phi_j(i) = \dfrac{(-1)^{i + j}}{j!}\prod_{c=0}^{j-1}(i - c)\]
+
+Bajo está conjetura, cada $y_k$ se podría obtener directamente con las funciones que
+expresan cada columna de la matriz. Nótese que el subíndice de cada función $\phi$
+corresponde al mismo subíndice de $x$, y el valor en el que se evalúa, corresponde
+a la iteración.
+
+Por ejemplo:
+
+\begin{center}
+    \begin{derivation}<1.5>
+            \res{ y_3 = 
+            \dfrac{1}{3!}(\,x_0\,\phi_0(3) + x_1\,\phi_1(3)  + x_2\,\phi_2(3) + x_3\,\phi_3(3)\,) }\\
+        \why{ Def.($\phi_j(i)$) }\\
+            \res{ y_3 = 
+            \dfrac{1}{3!}(-x_0 + 3x_1 - 3x_2 + x_3) }
+    \end{derivation}
+\end{center}
+
+Por ejemplo, si los valores de la matriz son válidos, se podría expresar la iteración $a_3(n)$ de la siguiente forma:
+
+\begin{center}
+    \begin{derivation}
+            \res{ a_3(n) = \dsum_{i = 0}^{3} y_i \dprod_{c=0}^{i-1}(n-c)}\\
+        \why*{}\\
+            \res{ a_3(n) = y_0 + y_1\,n + y_2\,n(n-1) + y_3\,n(n-1)(n-2) }\\
+        \why{ Conjetura de $y_k$ }\\
+            \res{ a_3(n) = x_0 + (-x_0 + x_1)\,n + \dfrac{1}{2}(x_0 -2x_1 + x_2)\,n(n-1) }\\
+            &\qquad\qquad + \dfrac{1}{3!}(-x_0 + 3x_1 - 3x_2 + x_3)\,n(n-1)(n-2)
+    \end{derivation}
+\end{center}
+
+Entonces lo que hace falta demostrar es la siguiente igualdad (el de $a_0(n)$ es inmediato):
+
+\[a_{k+1}(n) = \dsum_{i=0}^{k}y_i\dprod_{c=0}^{i-1}(n-c)\]
