--- a/Sucesiones/proyecto_sucesiones.tex
+++ b/Sucesiones/proyecto_sucesiones.tex
@@ -7,6 +7,7 @@
 \usepackage{mathtools}
 \usepackage{logicDG}
 \usepackage{blkarray}
+\usepackage{enumitem}
 \usepackage[spanish, es-noshorthands, es-noquoting]{babel}
 
 
