--- a/Sucesiones/ejemplo_introd.tex
+++ b/Sucesiones/ejemplo_introd.tex
@@ -1,3 +1,7 @@
+\sect{Obtención del algoritmo}
+
+En esta sección se mostrará la idea del algoritmo y como se puede expresar en una forma más formal. Posteriormente, se estudiará para poder reducir su complejidad a la hora de usarse.
+
 \subsect{Ejemplo introductorio}
 Suponga que tiene los siguientes números: $36, 28, 15$
 
